♻️Refactor: 커뮤니티 게시글 전체 조회 가능하도록 수정
* :recycle:Refactor: 게시글 카테고리 추가

* :heavy_plus_sign:Dependency: WebSocket 의존성 추가

* :recycle:Refactor: 교환 게시글 식별자 추가 및 로직 수정

* :sparkles:Feat: 웹소켓 기반 채팅 기능 구현

* :recycle:Refactor: 게시글 쿼리 메소드 오류 수정

* :recycle:Refactor: 코드 리뷰 기반 수정사항 반영

* :recycle:Refactor: 코드 리뷰 기반 수정사항 반영

* :recycle:Refactor: 커뮤니티 게시글 전체 조회 가능하도록 수정